# octoprint

./: Cargo.toml
examples/: get_current_job.rs
src/: client.rs  lib.rs
src/client/: builder.rs  error.rs  helpers.rs  mod.rs  server.rs
src/client/file/: model.rs  operations.rs
src/client/fileops/: mod.rs  model.rs
src/client/job/: model.rs  operations.rs
src/client/jobops/: model.rs
src/client/printer/: model.rs  operations.rs
src/client/printer/model/: temperature.rs
src/client/printerops/: model.rs
src/client/server/: model.rs  operations.rs
src/client/server/operations/: general.rs
tests/: common.rs  file_ops.rs  integration_tests.rs  job_ops.rs  printer_ops.rs  server_ops.rs
tests/common/: mod.rs
tests/file_ops/: mod.rs
tests/job_ops/: mod.rs
tests/printer_ops/: mod.rs
tests/server_ops/: mod.rs
