[package]
name = "octoprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["default", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
url = "2.3.1"
url_serde = "0.2.0"

[dev-dependencies]
tokio = {version = "1.25.0", features = ["full"]}
