[package]
name = "octoprint"
version = "0.1.0"
edition = "2021"
description = "(WIP) A client library for the Octoprint REST API"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-stack = "0.3.1"
reqwest = { version = "0.11.14", features = ["default", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
thiserror = "1.0.38"
url = "2.3.1"
url_serde = "0.2.0"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
lazy_static = { version = "1.4.0" }
